feat: set up not foun page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,5 @@
 {
-  "About us": "",
-  "Main page": "",
   "Test translation": "Тестовый перевод",
-  "Translate": "RU"
+  "Translate": "RU",
+  "Not found": "Страница не найдена"
 }
