feat: added error boundry

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
   "Translate": "EN",
-  "Not found": "Not found"
+  "Not found": "Not found",
+  "Something is wrong": "Something is wrong",
+  "Reload": "Reload",
+  "Throw error": "Throw error"
 }
